--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,3 +1,9 @@
 {
-    "Dashboard": "Panel"
+    "Dashboard": "Panel",
+    "The provided password does not match your current password.": "",
+    "This user already belongs to the team.": "",
+    "This user has already been invited to the team.": "",
+    "View profile": "Ver perfil",
+    "We were unable to find a registered user with this email address.": "",
+    "You may not leave a team that you created.": ""
 }
