--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,12 +1,111 @@
 {
+    "Account": "Account",
+    "Account administrator": "Account administrator",
+    "Account settings": ":name account settings",
+    "Active": "Active",
+    "Address": "Address",
+    "Adult": "Adult",
+    "Back": "Back",
+    "Blocked": "Blocked",
+    "Cancel": "Cancel",
+    "Code": "Code",
+    "Contact missing": "Contact missing",
+    "Country": "Country",
+    "Create employee": "Create employee",
+    "Create patient": "Create patient",
+    "Currency": "Currency",
+    "Customers": "Customers",
     "Dashboard": "Dashboard",
+    "Date of birth": "Date of birth",
+    "Default values used throughout the system": "Default values used throughout the system",
+    "Dependent": "Dependent",
+    "Description": "Description",
+    "Edit": "Edit",
+    "Editing": "Editing",
+    "Editing patient": "Editing patient",
+    "Editing profile": "Editing profile",
+    "Email": "Email",
+    "Employee": "Employee",
+    "Employee data": "Employee data",
+    "Employees": "Employees",
+    "Exit edit": "Exit edit",
+    "Father": "Father",
+    "Female": "Female",
+    "Fulfilment houses": "Fulfilment houses",
+    "Gender": "Gender",
+    "Guardian": "Guardian",
+    "Guardian contact details": "Guardian contact details",
+    "Guardian contact information": "Guardian contact information",
+    "Guardian name": "Guardian name",
+    "Guest": "Guest",
+    "Hired": "Hired",
+    "History": "History",
+    "Human resources": "Human resources",
+    "Id number": "Id number",
+    "Id type": "Id type",
+    "Identity document": "Identity document",
+    "Inventory": "Inventory",
+    "Inventory dashboard": "Inventory dashboard",
+    "Job title": "Job title",
+    "Job title not set": "Job title not set",
+    "Language": "Language",
+    "Left": "Left",
+    "Localisation": "Localisation",
+    "Log out": "Log out",
+    "Male": "Male",
+    "Mother": "Mother",
+    "My profile": "My profile",
+    "My roles": "My roles",
+    "Name": "Name",
+    "New patient": "New patient",
+    "Nickname": "Nickname",
+    "Not an user": "Not an user",
+    "Open sidebar": "Open sidebar",
+    "Other": "Other",
+    "Passport": "Passport",
+    "Patient": "Patient",
+    "Patient contact information": "Patient contact information",
+    "Patient personal information": "Patient personal information",
+    "Patient registration": "Patient registration",
+    "Patient type": "Patient type",
+    "Patients": "Patients",
+    "Permissions": "Permissions",
+    "Personal information": "Personal information",
+    "Phone": "Phone",
+    "Preferences": "Preferences",
+    "Profile": "Profile",
+    "Relation": "Relation",
+    "Roles": "Roles",
+    "Save": "Save",
+    "Select a tab": "Select a tab",
+    "Start of employment": "Start of employment",
+    "State": "State",
+    "Status": "Status",
+    "Stocks": "Stocks",
+    "Stores": "Stores",
     "The provided password does not match your current password.": "The provided password does not match your current password.",
     "This user already belongs to the team.": "This user already belongs to the team.",
     "This user has already been invited to the team.": "This user has already been invited to the team.",
+    "Timezone": "Timezone",
+    "Type": "Type",
+    "Unknown ID": "Unknown ID",
+    "Update": "Update",
+    "Url": "Url",
+    "User": "User",
+    "Username": "Username",
+    "Users": "Users",
     "View profile": "View profile",
+    "Warehouses": "Warehouses",
     "We were unable to find a registered user with this email address.": "We were unable to find a registered user with this email address.",
+    "Websites": "Websites",
+    "Worker #": "Worker #",
+    "Worker number": "Worker number",
+    "Working": "Working",
     "You may not leave a team that you created.": "You may not leave a team that you created.",
-
-    "Account settings": ":name account settings"
-
+    "auth.failed": "auth.failed",
+    "auth.password": "auth.password",
+    "auth.throttle": "auth.throttle",
+    "editing": "editing",
+    "nickname": "nickname",
+    "validation.phone": "validation.phone"
 }
