--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,9 +1,111 @@
 {
+    "Account": "Cuenta",
+    "Account administrator": "administrador de cuenta",
+    "Account settings": "Configuraciones de la cuenta",
+    "Active": "Activo",
+    "Address": "Habla a",
+    "Adult": "Adulto",
+    "Back": "Regresar",
+    "Blocked": "Obstruido",
+    "Cancel": "Cancelar",
+    "Code": "Clave",
+    "Contact missing": "falta el contacto",
+    "Country": "País",
+    "Create employee": "Clear empleado",
+    "Create patient": "Crear paciente",
+    "Currency": "Divisa",
+    "Customers": "Clientes",
     "Dashboard": "Panel",
-    "The provided password does not match your current password.": "",
-    "This user already belongs to the team.": "",
-    "This user has already been invited to the team.": "",
+    "Date of birth": "Fecha de nacimiento",
+    "Default values used throughout the system": "Valores predeterminados utilizados en todo el sistema",
+    "Dependent": "Dependiente",
+    "Description": "Descripción",
+    "Edit": "Editar",
+    "Editing": "Editando",
+    "Editing patient": "Editando paciente",
+    "Editing profile": "Perfil de edición",
+    "Email": "Correo electrónico",
+    "Employee": "Empleado",
+    "Employee data": "datos de empleados",
+    "Employees": "Empleados",
+    "Exit edit": "Salir de editar",
+    "Father": "Padre",
+    "Female": "Mujer",
+    "Fulfilment houses": "Casas de cumplimiento",
+    "Gender": "Género",
+    "Guardian": "guardián",
+    "Guardian contact details": "Datos de contacto del tutor",
+    "Guardian contact information": "Información de contacto del tutor",
+    "Guardian name": "Nombre del guardián",
+    "Guest": "Invitado",
+    "Hired": "Contratado",
+    "History": "Historia",
+    "Human resources": "Recursos humanos",
+    "Id number": "Número de identificación",
+    "Id type": "Tipo de identificación",
+    "Identity document": "Documento de identidad",
+    "Inventory": "Inventario",
+    "Inventory dashboard": "Tablero de inventario",
+    "Job title": "Título profesional",
+    "Job title not set": "Título del trabajo no establecido",
+    "Language": "Idioma",
+    "Left": "Izquierda",
+    "Localisation": "Localización",
+    "Log out": "Cerrar sesión",
+    "Male": "Masculino",
+    "Mother": "Mamá",
+    "My profile": "Mi perfil",
+    "My roles": "mis roles",
+    "Name": "Nombre",
+    "New patient": "Paciente nuevo",
+    "Nickname": "Apodo",
+    "Not an user": "No es un usuario",
+    "Open sidebar": "Abrir barra lateral",
+    "Other": "Otro",
+    "Passport": "Pasaporte",
+    "Patient": "Paciente",
+    "Patient contact information": "Información de contacto del paciente",
+    "Patient personal information": "Datos personales del paciente",
+    "Patient registration": "Registro de pacientes",
+    "Patient type": "tipo de paciente",
+    "Patients": "Pacientes",
+    "Permissions": "permisos",
+    "Personal information": "Informacion personal",
+    "Phone": "Teléfono",
+    "Preferences": "preferencias",
+    "Profile": "Perfil",
+    "Relation": "Relación",
+    "Roles": "roles",
+    "Save": "Ahorrar",
+    "Select a tab": "Seleccione una pestaña",
+    "Start of employment": "Comienzo del empleo",
+    "State": "Expresar",
+    "Status": "Estado",
+    "Stocks": "Cepo",
+    "Stores": "Historias",
+    "The provided password does not match your current password.": "La contraseña proporcionada no coincide con su contraseña actual.",
+    "This user already belongs to the team.": "Este usuario ya pertenece al equipo.",
+    "This user has already been invited to the team.": "Este usuario ya ha sido invitado al equipo.",
+    "Timezone": "Zona horaria",
+    "Type": "Escribe",
+    "Unknown ID": "Identificación desconocida",
+    "Update": "Actualizar",
+    "Url": "URL",
+    "User": "Usuario",
+    "Username": "Nombre de usuario",
+    "Users": "Usuarios",
     "View profile": "Ver perfil",
-    "We were unable to find a registered user with this email address.": "",
-    "You may not leave a team that you created.": ""
+    "Warehouses": "Almacenes",
+    "We were unable to find a registered user with this email address.": "No pudimos encontrar un usuario registrado con esta dirección de correo electrónico.",
+    "Websites": "sitios web",
+    "Worker #": "Trabajador #",
+    "Worker number": "número de trabajador",
+    "Working": "Laboral",
+    "You may not leave a team that you created.": "No puede abandonar un equipo que haya creado.",
+    "auth.failed": "autenticación fallida",
+    "auth.password": "auth.contraseña",
+    "auth.throttle": "auth.acelerador",
+    "editing": "edición",
+    "nickname": "apodo",
+    "validation.phone": "validación.teléfono"
 }
